[BE] refactor: 자치구 관련 리팩토링 작업 진행중